fix: overlapping the premium tooltip

--- a/assets/dev/sass/generic/_generic.scss
+++ b/assets/dev/sass/generic/_generic.scss
@@ -887,6 +887,7 @@
       padding: 10px;
       white-space: nowrap;
       cursor: default;
+      overflow: hidden;
     }
 
 
